--- a/source/_posts/(3条消息) markdown常见数学符号和运算_MyNotes-CSDN博客_markdown数学符号.html
+++ b/source/_posts/(3条消息) markdown常见数学符号和运算_MyNotes-CSDN博客_markdown数学符号.html
@@ -1,5 +1,7 @@
 ---
 abbrlink: '0'
+title: heml
+hide: true
 ---
 <!DOCTYPE html>
 <!-- saved from url=(0059)https://blog.csdn.net/qq1195365047/article/details/88616220 -->
